Adding new API projects with basic fnctional completion

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <header>
 
     </header>
-    <main class="h-screen flex justify-between p-8">
-        <div class="bg-blue-200 w-1/4">
-            <h1>Person</h1>
-            <ul id="person" class="list">
+    <main class="h-screen flex justify-evenly p-8">
+        <div class="bg-blue-200 w-1/4 rounded-lg pt-8">
+            <h1 class="text-2xl font-bold flex justify-center">Person</h1>
+            <ul id="person" class="flex flex-col justify-center items-center">
 
             </ul>
         </div>
         <div>
-            <h1>Person Info</h1>
-            <div id="info"></div>
+            <h1 class="text-2xl font-bold flex justify-center">Person Info</h1>
+            <div class="flex justify-center items-center" id="info"></div>
         </div>
     </main>
     <script src="./main.js"></script>
