--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
             <div class="flex justify-center items-center" id="info"></div>
         </div>
     </main>
+    <footer>
+        <div class="card bg-neutral text-neutral-content w-96">
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Cookies!</h2>
+              <p>We are using cookies for no reason.</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary">Accept</button>
+                <button id="denBtn" class="btn btn-ghost">Deny</button>
+                <div id="btnContainer">
+                    
+                </div>
+                <button class="btn btn-primary">Continue</button>
+              </div>
+            </div>
+        </div>
+    </footer>
     <script src="./main.js"></script>
 </body>
 </html>
